--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,26 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/golang:1.9
-
     working_directory: /go/src/github.com/MasatoYoshioka/go-web-server
+    docker:
+      - image: google/cloud-sdk
     steps:
       - checkout
-      - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - setup_remote_docker:
+          version: 18.06.0-ce
+      - run:
+          name: Setup CLOUD SDK
+          command: |
+            echo $GOOGLE_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            gcloud --quiet auth configure-docker
+        - run:
+            name: Push docker image
+            command: |
+                docker build -t go-web-server .
+            TAG=gcr.io/deployflow-project/go-web-server:pushed-'date +%Y%m%d%H%M%S'
+            docker tag go-web-server $TAG
+            LATEST_TAG=gcr.io/deployflow-project/go-web-server:latest
+            docker tag go-web-server $LATEST_TAG
+            docker push $LATEST_TAG
