--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
           name: Push docker image
           command: |
             docker build -t go-web-server .
-            TAG=gcr.io/deployflow-project/go-web-server:pushed-'date +%Y%m%d%H%M%S'
+            TAG=gcr.io/deployflow-project/go-web-server:pushed-`date +%Y%m%d%H%M%S`
             docker tag go-web-server $TAG
             LATEST_TAG=gcr.io/deployflow-project/go-web-server:latest
             docker tag go-web-server $LATEST_TAG
